# pyImprov

./: README.md  example.py  improv.py  mini-selftest.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
